--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -3,25 +3,24 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - master  # Change this if you're using a different branch
+      - master  # or your default branch name
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Updated to v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v3  # Updated to v3
         with:
-          node-version: '14'  # Use the Node.js version required by Firebase
+          node-version: '20'
 
       - name: Install dependencies
-        run: npm install -g firebase-tools
+        run: npm install
 
-      - name: Deploy to Firebase Hosting
-        run: firebase deploy --only hosting
+      - name: Build and deploy
+        run: npm run build && firebase deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
